Add binding to background brush

--- a/src/ResponsiveFlow.Application/MainWindow.xaml
+++ b/src/ResponsiveFlow.Application/MainWindow.xaml
@@ -25,6 +25,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate x:Name="MessageDataTemplate" d:DataContext="{rfp:InAppMessageViewModel}">
                     <TextBlock
+                        Background="{Binding BackgroundBrush, Mode=OneTime}"
                         Text="{Binding Text, Mode=OneTime}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
