Add autoscrolling of the list view

--- a/src/ResponsiveFlow.Application/MainWindow.xaml
+++ b/src/ResponsiveFlow.Application/MainWindow.xaml
@@ -28,6 +28,7 @@
             IsIndeterminate="True"
             Margin="8 0 8 8" />
         <ListView
+            x:Name="MessageListView"
             HorizontalContentAlignment="Stretch"
             Margin="8 0 8 8"
             ItemsSource="{Binding Messages, Mode=OneTime}">
