--- a/src/ResponsiveFlow.Application/MainWindow.xaml
+++ b/src/ResponsiveFlow.Application/MainWindow.xaml
@@ -10,13 +10,25 @@
         MinHeight="300" MinWidth="500"
         Title="{Binding Title, Mode=OneWay}">
     <DockPanel LastChildFill="True">
-        <Menu DockPanel.Dock="Top" VerticalAlignment="Top">
+        <Menu DockPanel.Dock="Top" Margin="8" VerticalAlignment="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_Open…" Command="{Binding OpenCommand}" />
             </MenuItem>
         </Menu>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-            <Button Margin="8" MinHeight="32" MinWidth="64" Command="{Binding RunCommand}">Run</Button>
+        <StatusBar DockPanel.Dock="Bottom" Margin="8 0 8 8">
+            <StatusBarItem>
+                <TextBlock Text="{Binding StateStatus, Mode=OneWay}" />
+            </StatusBarItem>
+            <Separator />
+            <StatusBarItem HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
+                <ProgressBar
+                    Height="12"
+                    HorizontalAlignment="Stretch"
+                    IsIndeterminate="True" />
+            </StatusBarItem>
+        </StatusBar>
+        <StackPanel DockPanel.Dock="Top" Margin="8 0 8 8" Orientation="Horizontal">
+            <Button MinHeight="32" MinWidth="64" Command="{Binding RunCommand}">Run</Button>
         </StackPanel>
         <ProgressBar
             DockPanel.Dock="Top"
@@ -26,12 +38,6 @@
             Maximum="1.0"
             Value="{Binding ProgressValue, Mode=OneWay}"
             Visibility="{Binding ProgressBarVisibility, Mode=OneWay}" />
-        <ProgressBar
-            DockPanel.Dock="Bottom"
-            Height="12"
-            HorizontalAlignment="Stretch"
-            IsIndeterminate="True"
-            Margin="8 0 8 8" />
         <ListView
             x:Name="MessageListView"
             HorizontalContentAlignment="Stretch"
